@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.134 2001/08/16 15:24:21 stelian Exp $
+$Id: CHANGES,v 1.135 2001/08/17 09:55:09 stelian Exp $
 
 Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 ===================================================================
@@ -26,6 +26,10 @@ Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 	The same warning as for the zlib compression applies:
 	the tape format of a bzip2 dump is not compatible with the
 	original BSD tape format.
+
+7.	Fixed a overflow problem in dump corrupting the dump when
+	very large files were encountered. Thanks to Vladimir Nadvornik 
+	for the bug report.
 
 Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
 ===================================================================
